# underwater_PINGuins

./: .gitignore  message_generator.py  readme.md
DFT_demo/: bit_detection.py  constants.py  main.py  message_generator.py  plotting.py  sliding_DFT.py
Matlab_scripts/: animateSlidingDFT.m  calculate_natural_frequencies.m  dist_calculations.asv  dist_calculations.m  dist_sample_plot.m  fullFFT.m  getMaxNoise.m  plotDataAndHistogram.m  plotFreqsOfInterest.asv  plotFreqsOfInterest.m  pls_help_kaelan.txt  readUint16File.m  read_dac_data.asv  read_dac_data.m  speed_of_sound_calibration.py  temp.asv  temp.m  test.m  testDifferentWindowSizes.m  test_bytes.py  timeVsDist.asv  timeVsDist.m  timeVsDistPacPool.m  untitled.asv
algorithm_demo/: calibration.py  call_and_Response.py  main.py  moving.py  ongoing.py
c_code/: CMakeLists.txt  complex_type.c  complex_type.h  constants.c  constants.h  dac-driver.c  fourier.c  (+15 more)
command_server/: .gitignore  Cargo.toml  layout_helptxt.txt  test_bytes.py
command_server/_.vscode/: launch.json
command_server/src/: config.rs  main.rs  serve.py  utils.rs
command_server/src/command_server_mod/: consume_data.rs  file_writer.rs  mod.rs  server.rs  stdin_listener.rs
maurice/: Cargo.toml  Rocket.toml  _this_host_ip  history.txt  layout_helptxt.txt  main copy.rs  main_blocky.rs  main_hardcoded_n_secs.rs  main_works_no_record.rs  socket_serv.py  write_me
maurice/src/: config.rs  main.rs  utils.rs
maurice/src/mmaurice/: consume_data.rs  file_writer.rs  mod.rs  msound_player.rs  server.rs  stdin_listener.rs  web_server.rs  web_server_old.rs
(+277 files in other folders)
