[package]
name = "command_server"
version = "0.1.0"
edition = "2021"
default-run = "command_server"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.94"
futures = "0.3"
chrono = "0.4.23"
# rocket = "0.5.0-rc.2"
# rocket_contrib = "0.4.11"
rodio = "0.17.0"
rustyline = {version = "11.0.0", features = ["with-file-history"]}
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = "1.26.0"

[[bin]]
name = "command_server"
path = "src/main.rs"

[[bin]]
name = "old"
path = "src/bin/old.rs"

[[bin]]
name = "poll"
path = "src/bin/poll.rs"

[[bin]]
name = "passthrough"
path = "src/bin/passthrough.rs"